--- a/scss/main.scss
+++ b/scss/main.scss
@@ -3,6 +3,7 @@
 @import "vendors/daneanimate";
 @import "vendors/font-awesome";
 @import "vendors/sweetalert";
+@import "vendors/angular-chart";
 
 @import "modules/all";
 @import "partials/base";
