--- a/public/views/admin/position.html
+++ b/public/views/admin/position.html
@@ -22,8 +22,7 @@
 								<input ng-change="position.update = true" type="text" class="input-lg" placeholder="Position Name" ng-model="position.attributes.name">
 							</td>
 							<td style="width: 170px;">
-								<button ng-click="deletePosition(position)" class="btn btn-sm btn-danger">delete</button>
-								<button ng-show="position.update" class="btn btn-sm btn-success-border animated fadeIn" ng-click="updatePosition(position)">update</button>
+								<button ng-class="{'btn-success-border':position.update}" class="btn btn-sm btn-default animated fadeIn" ng-click="position.update && updatePosition(position)">update</button>
 							</td>
 						</tr>
 					</tbody>
