--- a/public/views/form/itemregistration.html
+++ b/public/views/form/itemregistration.html
@@ -65,7 +65,7 @@
 		</div>
 		<div class="row">
 			<div class="col-md-12">
-				<table>
+				<table ng-class="{ 'loading':loading }">
 					<thead>
 						<tr>
 							<th></th>
