--- a/public/views/report/capacity.html
+++ b/public/views/report/capacity.html
@@ -3,55 +3,66 @@
 	<hr>
 	<div class="form-control">
 		<div class="row">
-			<div class="col-md-12">
+			<div class="col-md-7">
 				<div class="row">
-					<div class="col-md-3 text-right">
-						<p class="small bold form-text">Branch</p>
+					<div class="col-md-12">
+						<div class="row">
+							<div class="col-md-3 text-right">
+								<p class="small bold form-text">Branch</p>
+							</div>
+							<div class="col-md-9 ">
+								<p class="small form-text">{{ branch.attributes.name }}</p>
+							</div>
+						</div>
 					</div>
-					<div class="col-md-9 ">
-						<p class="small form-text">Bangmod</p>
+				</div>
+				<div class="row">
+			        <div class="col-md-12">
+			            <div class="row">
+			                <div class="col-md-3 text-right">
+			                    <p class="small bold form-text">Address</p>
+			                </div>
+			                <div class="col-md-9 ">
+			                    <p class="small form-text">{{ branch.attributes.address }}</p>
+			                </div>
+			            </div>
+			        </div>
+			    </div>
+		        <div class="row">
+		        	<div class="col-md-12">
+						<div class="row">
+							<div class="col-md-3 text-right">
+								<p class="small bold form-text">Usage</p>
+							</div>
+							<div class="col-md-9 ">
+								<p class="small form-text"><span class="text-danger">{{ branch.attributes.usage | number:0 }}%</span></p>
+							</div>
+						</div>
+					</div>
+		        </div>
+				<div class="row">
+					<div class="col-md-12">
+						<div class="row">
+							<div class="col-md-3 text-right">
+								<p class="small bold form-text">Free</p>
+							</div>
+							<div class="col-md-9">
+								<p class="small form-text">{{ branch.attributes.free | number:0 }}%</p>
+							</div>
+						</div>
+					</div>
+				</div>	
+			</div>
+			<div class="col-md-5">
+				<div class="row">
+					<div class="col-md-12">
+						<canvas class="chart chart-pie"
+						  chart-data="chartData" chart-labels="chartLabels" chart-options="chartOptions" chart-legend="true" chart-colours="chartColours">
+						</canvas> 
 					</div>
 				</div>
 			</div>
 		</div>
-        <div class="col-md-12">
-            <div class="row">
-                <div class="col-md-3 text-right">
-                    <p class="small bold form-text">Address</p>
-                </div>
-                <div class="col-md-9 ">
-                    <p class="small form-text">134 Prachauthid Ladprao Rd.</p>
-                </div>
-            </div>
-        </div>
-		<div class="row">
-			<div class="col-md-12">
-				<div class="row">
-					<div class="col-md-3 text-right">
-						<p class="small bold form-text">Free</p>
-					</div>
-					<div class="col-md-9">
-						<p class="small form-text">75%</p>
-					</div>
-				</div>
-			</div>
-			<div class="col-md-12">
-				<div class="row">
-					<div class="col-md-3 text-right">
-						<p class="small bold form-text">Usage</p>
-					</div>
-					<div class="col-md-9 ">
-						<p class="small form-text"><span class="text-danger">15%</span></p>
-					</div>
-				</div>
-			</div>
-		</div>
-		
-		</div>
-		<hr>
 	</div>
+	<hr>
 </div>
-
-
-//copy
-
