--- a/scss/modules/_forms.scss
+++ b/scss/modules/_forms.scss
@@ -77,9 +77,14 @@ table {
 		padding: 10px 5px !important;
 		background-color: transparent !important;
 		border: 1px solid transparent;
-		&:hover,
-		&:active,
-		&:focus {
+	}
+	tr:hover {
+		input[type="text"],
+		input[type="email"],
+		input[type="password"],
+		input[type="date"],
+		textarea,
+		select{
 			background-color: darken($input-background-color,3) !important;
 			border: 1px solid darken($input-background-color,10);
 		}
