--- a/public/views/member.html
+++ b/public/views/member.html
@@ -7,7 +7,7 @@
 <div class="content content--member animated fadeIn">
 	<p class="topic">member</p>
 	<hr>
-	<form ng-submit="login(user)" class="form-control">
+	<form ng-submit="vm.login(user)" class="form-control">
 		<div class="row">
 			<div class="col-md-12">
 				<input type="text" ng-model="user.email" class="center-block input-lg" placeholder="Email" ng-required>
