--- a/public/views/admin/branch.html
+++ b/public/views/admin/branch.html
@@ -5,7 +5,7 @@
 	<div class="form-control">
 		<div class="row">
 			<div class="col-md-12">
-				<table  ng-class="{ 'loading': loading }">
+				<table  ng-class="{ 'loading': vm.loading }">
 					<thead>
 						<tr>
 							<th class="text-center">ID</th>
@@ -17,7 +17,7 @@
 						</tr>
 					</thead>
 					<tbody>
-						<tr class="animated fadeIn" ng-repeat="branch in branches | orderBy:'attributes._id'">
+						<tr class="animated fadeIn" ng-repeat="branch in vm.branches | orderBy:'attributes._id'">
 							<td class="bold text-center narrow">
 								{{ branch.attributes._id }}
 							</td>
@@ -34,7 +34,7 @@
 								<input ng-change="branch.update = true" type="text" class="input-sm" placeholder="Branch Capacity" ng-model="branch.attributes.capacity">
 							</td>
 							<td style="width: 170px;">
-								<button ng-class="{'btn-success-border':branch.update}" class="btn btn-sm btn-default animated fadeIn" ng-click="branch.update && updateBranch(branch)">update</button>
+								<button ng-class="{'btn-success-border':branch.update}" class="btn btn-sm btn-default animated fadeIn" ng-click="branch.update && vm.updateBranch(branch)">update</button>
 							</td>
 						</tr>
 					</tbody>
@@ -90,7 +90,7 @@
 			<div class="col-md-6 col-md-offset-6">
 				<div class="row">
 					<div class="col-md-7 col-md-offset-5">
-						<button ng-click="addBranch(newBranch)" class="btn btn-md btn-success">Add</button>
+						<button ng-click="vm.addBranch(newBranch)" class="btn btn-md btn-success">Add</button>
 					</div>
 				</div>
 			</div>
