--- a/public/views/admin/item.html
+++ b/public/views/admin/item.html
@@ -5,7 +5,7 @@
 	<div class="form-control">
 		<div class="row">
 			<div class="col-md-12">
-				<table ng-class="{ 'loading': loading }">
+				<table ng-class="{ 'loading': vm.loading }">
 					<thead>
 						<tr>
 							<th class="text-center">ID</th>
@@ -17,7 +17,7 @@
 						</tr>
 					</thead>
 					<tbody>
-						<tr class="animated fadeIn" ng-repeat="item in items | orderBy:'attributes._id'">
+						<tr class="animated fadeIn" ng-repeat="item in vm.items | orderBy:'attributes._id'">
 							<td class="bold text-center narrow">
 								{{ item.attributes._id }} 
 							</td>
@@ -31,15 +31,10 @@
 								<input ng-change="item.update = true"  type="text" class="input-sm" placeholder="Item cost" ng-model="item.attributes.cost">
 							</td>
 							<td>
-								<select ng-change="item.update = true"
-										ng-model="item.relationships.type"
-										ng-options="type.attributes.name for type in itemTypes track by type.attributes.name"
-										class="input-md">
-								</select>
-								<i class="fa fa-caret-down caret-select"></i>
+								{{ item.relationships.type.attributes.name }}
 							</td>
 							<td style="width: 170px;">
-								<button ng-class="{'btn-success-border':item.update}" class="btn btn-sm btn-default animated fadeIn" ng-click="item.update && updateItem(item)">update</button>
+								<button ng-class="{'btn-success-border':item.update}" class="btn btn-sm btn-default animated fadeIn" ng-click="item.update && vm.updateItem(item)">update</button>
 							</td>
 						</tr>
 					</tbody>
@@ -76,9 +71,9 @@
 						<p class="small bold form-text">Item Type</p>
 					</div>
 					<div class="col-md-7 ">
-						<select ng-init="newItem.type = itemTypes[0]" 
+						<select ng-init="newItem.type = vm.itemTypes[0]" 
 								ng-model="newItem.type"
-								ng-options="type.attributes.name for type in itemTypes"
+								ng-options="type.attributes.name for type in vm.itemTypes"
 								class="input-lg">
 						</select>
 						<i class="fa fa-caret-down caret-select"></i>
@@ -88,7 +83,7 @@
 			<div class="col-md-6">
 				<div class="row">
 					<div class="col-md-7 col-md-offset-5">
-						<button ng-click="addItem(newItem)" class="btn btn-md btn-success">Add</button>
+						<button ng-click="vm.addItem(newItem)" class="btn btn-md btn-success">Add</button>
 					</div>
 				</div>
 			</div>
