--- a/public/views/admin/position.html
+++ b/public/views/admin/position.html
@@ -5,7 +5,7 @@
 	<div class="form-control">
 		<div class="row">
 			<div class="col-md-12">
-				<table ng-class="{ 'loading': loading }">
+				<table ng-class="{ 'loading': vm.loading }">
 					<thead>
 						<tr>
 							<th class="text-center">ID</th>
@@ -14,7 +14,7 @@
 						</tr>
 					</thead>
 					<tbody>
-						<tr ng-repeat="position in positions">
+						<tr ng-repeat="position in vm.positions">
 							<td class="bold text-center">
 								{{ position.attributes._id }}
 							</td>
@@ -22,7 +22,7 @@
 								<input ng-change="position.update = true" type="text" class="input-lg" placeholder="Position Name" ng-model="position.attributes.name">
 							</td>
 							<td style="width: 170px;">
-								<button ng-class="{'btn-success-border':position.update}" class="btn btn-sm btn-default animated fadeIn" ng-click="position.update && updatePosition(position)">update</button>
+								<button ng-class="{'btn-success-border':position.update}" class="btn btn-sm btn-default animated fadeIn" ng-click="position.update && vm.updatePosition(position)">update</button>
 							</td>
 						</tr>
 					</tbody>
@@ -44,7 +44,7 @@
 			<div class="col-md-6">
 				<div class="row">
 					<div class="col-md-7 col-md-offset-5">
-						<button ng-click="addPosition(newPosition)" class="btn btn-md btn-success">Add</button>
+						<button ng-click="vm.addPosition(newPosition)" class="btn btn-md btn-success">Add</button>
 					</div>
 				</div>
 			</div>
