--- a/public/views/report/itemRefillAlert.html
+++ b/public/views/report/itemRefillAlert.html
@@ -9,7 +9,7 @@
 						<p class="small bold form-text">Branch</p>
 					</div>
 					<div class="col-md-7 ">
-						<p class="small form-text">{{ user.relationships.branch.name }}</p>
+						<p class="small form-text">{{ vm.user.relationships.branch.name }}</p>
 					</div>
 				</div>
 			</div>
@@ -21,7 +21,7 @@
 						<p class="small bold form-text">Address</p>
 					</div>
 					<div class="col-md-7 ">
-						<p class="small form-text">{{ user.relationships.branch.address }}</p>
+						<p class="small form-text">{{ vm.user.relationships.branch.address }}</p>
 					</div>
 				</div>
 			</div>
@@ -42,7 +42,7 @@
 						<tr style="cursor: default;"class="animated fadeIn" ng-hide="items[0].attributes">
 							<td class="text-center" colspan="5">No Items have quantity lower than 50</td>
 						</tr>
-						<tr ng-show="item.attributes" ng-repeat="item in items">
+						<tr ui-sref="itemInfo({id: '{{item.attributes._id}}'})" ng-show="item.attributes" ng-repeat="item in vm.items">
 							<td class="bold narrow text-center">{{ $index + 1 }}</td>
 							<td class="underline">{{ item.attributes.code }}</td>
 							<td class="underline">{{ item.attributes.name }}</td>
