--- a/public/views/report/orderHistoryByItem.html
+++ b/public/views/report/orderHistoryByItem.html
@@ -9,9 +9,10 @@
                         <p class="small bold form-text">Item</p>
                     </div>
                     <div class="col-md-7 ">
-                        <select class="input-lg">
-                            <option value="1">TV Sony 42' Model 5G112TG</option>
-                            <option value="1">TV Sony 42' Model 73977GG"</option>
+                        <select ng-change="vm.getOrdersByItem(vm.searchItem,vm.user.relationships.branch)"
+                                ng-model="vm.searchItem"
+                                class="input-lg"
+                                ng-options="item.attributes.name for item in vm.itemsAll track by item.attributes.name">
                         </select>
                         <i class="fa fa-caret-down caret-select"></i>
                     </div>
@@ -23,7 +24,7 @@
                         <p class="small bold form-text">Branch</p>
                     </div>
                     <div class="col-md-7 ">
-                        <p class="small form-text">{{ user.relationships.branch.name }}</p>
+                        <p class="small form-text">{{ vm.user.relationships.branch.name }}</p>
                     </div>
                 </div>
             </div>
@@ -34,37 +35,41 @@
                         <p class="small bold form-text">Address</p>
                     </div>
                     <div class="col-md-7 ">
-                        <p class="small form-text">{{ user.relationships.branch.address }}</p>
+                        <p class="small form-text">{{ vm.user.relationships.branch.address }}</p>
                     </div>
                 </div>
             </div>
         </div>
     <div class="row">
         <div class="col-md-12">
-            <table class="animated fadeIn">
+            <table ng-show="vm.searchItem" class="animated fadeIn">
                 <thead>
                     <tr>
-                        <th></th>
+                        <th class="text-center">Order ID</th>
                         <th>Date</th>
-                        <th>Order Code</th>
                         <th>Customer</th>
+                        <th>Staff</th>
                         <th>Status</th>
+                        <th>Option</th>
                     </tr>
                 </thead>
                 <tbody>
-                    <tr>
-                        <td class="bold narrow text-center">1</td>
-                        <td class="underline">20 Jan 2015</td>
-                        <td class="underline">QRD012</td>
-                        <td>Babara Inc.</td>
-                        <td class="label label-warning">Pending</td>
-                    </tr>
-                    <tr>
-                        <td class="bold narrow text-center">2</td>
-                        <td class="underline">23 Feb 2015</td>
-                        <td class="underline">QRD054</td>
-                        <td>Masahiro Co.</td>
-                        <td class="label label-success">Delivered</td>
+                    <tr ng-repeat="order in vm.orders | orderBy:'order.attributes._id'">
+                        <td class="bold underline text-center">{{ order.attributes._id}}</td>
+                        <td class="underline">{{ order.attributes.date | date:'d MMM yyyy'  }}</td>
+                        <td ng-show="order.relationships.company">{{ order.relationships.company.name }}</td>
+                        <td>{{ order.relationships.staff.name }}</td>
+                        <td> 
+                            <select ng-change="order.update = true"
+                                    ng-model="order.relationships.status"
+                                    ng-options="status.attributes.name for status in vm.statuses track by status.attributes.name"
+                                    class="input-md">
+                            </select>
+                            <i style="margin-left:-25px;" class="fa fa-caret-down caret-select select-md"></i>
+                        </td>
+                        <td style="width: 170px;">
+                            <button ng-class="{'btn-success-border':order.update}" class="btn btn-sm btn-default animated fadeIn" ng-click="order.update && vm.updateOrder(order)">update</button>
+                        </td>
                     </tr>
                 </tbody>
             </table>
