--- a/public/views/report/orderHistoryByTime.html
+++ b/public/views/report/orderHistoryByTime.html
@@ -9,11 +9,7 @@
                         <p class="small bold form-text">From</p>
                     </div>
                     <div class="col-md-7 ">
-                        <select class="input-lg">
-                            <option value="1">20 Dec 2015</option>
-                            <option value="1">26 Dec 2015</option>
-                        </select>
-                        <i class="fa fa-caret-down caret-select"></i>
+                        <input ng-change="date.toDate && vm.getOrdersByTime(date,vm.user.relationships.branch)" ng-model="date.fromDate" class="input-lg"  type="date" placeholder="from date">
                     </div>
                 </div>
             </div>
@@ -23,7 +19,7 @@
                         <p class="small bold form-text">Branch</p>
                     </div>
                     <div class="col-md-7 ">
-                        <p class="small form-text">{{ user.relationships.branch.name }}</p>
+                        <p class="small form-text">{{ vm.user.relationships.branch.name }}</p>
                     </div>
                 </div>
             </div>
@@ -34,11 +30,7 @@
                     <p class="small bold form-text">To</p>
                 </div>
                 <div class="col-md-7 ">
-                    <select class="input-lg">
-                        <option value="1">20 Dec 2015</option>
-                        <option value="1">26 Dec 2015</option>
-                    </select>
-                    <i class="fa fa-caret-down caret-select"></i>
+                    <input ng-change="date.fromDate && vm.getOrdersByTime(date,vm.user.relationships.branch)" ng-model="date.toDate" class="input-lg" type="date" placeholder="to date">
                 </div>
             </div>
         </div>
@@ -48,7 +40,7 @@
                         <p class="small bold form-text">Address</p>
                     </div>
                     <div class="col-md-7 ">
-                        <p class="small form-text">{{ user.relationships.branch.address }}</p>
+                        <p class="small form-text">{{ vm.user.relationships.branch.address }}</p>
                     </div>
                 </div>
             </div>
@@ -58,27 +50,31 @@
             <table class="animated fadeIn">
                 <thead>
                     <tr>
-                        <th></th>
+                        <th class="text-center">Order ID</th>
                         <th>Date</th>
-                        <th>Order Code</th>
                         <th>Customer</th>
+                        <th>Staff</th>
                         <th>Status</th>
+                        <th>Option</th>
                     </tr>
                 </thead>
                 <tbody>
-                    <tr>
-                        <td class="bold narrow text-center">1</td>
-                        <td class="underline">20 Jan 2015</td>
-                        <td class="underline">QRD012</td>
-                        <td>Babara Inc.</td>
-                        <td class="label label-success">Delivered</td>
-                    </tr>
-                    <tr>
-                        <td class="bold narrow text-center">2</td>
-                        <td class="underline">23 Feb 2015</td>
-                        <td class="underline">QRD054</td>
-                        <td>Masahiro Co.</td>
-                        <td class="label label-success">Delivered</td>
+                    <tr ng-repeat="order in vm.orders | orderBy:'order.attributes._id'">
+                        <td class="bold underline text-center">{{ order.attributes._id}}</td>
+                        <td class="underline">{{ order.attributes.date | date:'d MMM yyyy'  }}</td>
+                        <td ng-show="order.relationships.company">{{ order.relationships.company.name }}</td>
+                        <td>{{ order.relationships.staff.name }}</td>
+                        <td> 
+                            <select ng-change="order.update = true"
+                                    ng-model="order.relationships.status"
+                                    ng-options="status.attributes.name for status in vm.statuses track by status.attributes.name"
+                                    class="input-md">
+                            </select>
+                            <i style="margin-left:-25px;" class="fa fa-caret-down caret-select select-md"></i>
+                        </td>
+                        <td style="width: 170px;">
+                            <button ng-class="{'btn-success-border':order.update}" class="btn btn-sm btn-default animated fadeIn" ng-click="order.update && vm.updateOrder(order)">update</button>
+                        </td>
                     </tr>
                 </tbody>
             </table>
