--- a/public/views/report/orderInfo.html
+++ b/public/views/report/orderInfo.html
@@ -1,83 +1,86 @@
 <div class="content animated fadeIn">
-    <h1>Order History by Status</h1>
+    <h1>Order Info</h1>
     <hr>
     <div class="form-control">
         <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-5">
                 <div class="row">
-                    <div class="col-md-5 text-right">
+                    <div class="col-md-4 text-right">
                         <p class="small bold form-text">Date</p>
                     </div>
-                    <div class="col-md-7 ">
-                       <p class="small form-text">20 Jul 2014</p>
+                    <div class="col-md-8 ">
+                       <p class="small form-text">{{ vm.order.attributes.date }}</p>
                     </div>
                 </div>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-7">
                 <div class="row">
-                    <div class="col-md-6 text-right">
+                    <div class="col-md-4 text-right">
                         <p class="small bold form-text">Branch</p>
                     </div>
-                    <div class="col-md-6 ">
-                        <p class="small form-text">{{ user.relationships.branch.name }}</p>
+                    <div class="col-md-8 ">
+                        <p class="small form-text">{{ vm.user.relationships.branch.name }}</p>
                     </div>
                 </div>
             </div>
-         </div>
-            <div class="col-md-6">
+        </div>
+        <div class="row">
+            <div class="col-md-5">
                 <div class="row">
-                    <div class="col-md-5 text-right">
-                        <p class="small bold form-text">Order Code</p>
+                    <div class="col-md-4 text-right">
+                        <p class="small bold form-text">Order ID</p>
                     </div>
-                    <div class="col-md-7 ">
-                       <p class="small form-text">QRD203</p>
+                    <div class="col-md-8 ">
+                       <p class="small form-text">{{ vm.order.attributes._id }}</p>
                     </div>
                 </div>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-7">
                 <div class="row">
-                    <div class="col-md-6 text-right">
+                    <div class="col-md-4 text-right">
                         <p class="small bold form-text">Address</p>
                     </div>
-                    <div class="col-md-6 ">
-                        <p class="small form-text">{{ user.relationships.branch.address }}</p>
+                    <div class="col-md-8 ">
+                        <p class="small form-text">{{ vm.user.relationships.branch.address }}</p>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="col-md-6">
+        <div class="row">
+            <div class="col-md-5">
                 <div class="row">
-                    <div class="col-md-5 text-right">
+                    <div class="col-md-4 text-right">
                         <p class="small bold form-text">Customer</p>
                     </div>
-                    <div class="col-md-7 ">
-                       <p class="small form-text">Babara Co.</p>
+                    <div class="col-md-8 ">
+                       <p class="small form-text">{{ vm.order.relationships.company.name }}</p>
                     </div>
                 </div>
             </div>
-    <div class="row">
-        <div class="col-md-12">
-            <table class="animated fadeIn">
-                <thead>
-                    <tr>
-                        <th></th>
-                        <th>Item Code</th>
-                        <th>Name</th>
-                        <th>Type</th>
-                        <th>Qty.</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td class="bold narrow text-center">1</td>
-                        <td class="underline">P001</td>
-                        <td class="underline">TV Samsung 42' Model 371</td>
-                        <td>Product</td>
-                        <td>250</td>
-                    </tr>
-                </tbody>
-            </table>
         </div>
-    </div>
+        <div class="row">
+            <div class="col-md-12">
+                <table class="animated fadeIn">
+                    <thead>
+                        <tr>
+                            <th></th>
+                            <th>Item Code</th>
+                            <th>Name</th>
+                            <th>Type</th>
+                            <th>Qty.</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr ng-repeat="item in vm.order.items">
+                            <td class="bold narrow text-center">{{ $index + 1 }}</td>
+                            <td class="underline">{{ item.attributes.code }}</td>
+                            <td class="underline">{{ item.attributes.name }}</td>
+                            <td>{{ item.relationships.type.name }}</td>
+                            <td>{{ item.attributes.quantity }}</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
     </div>
 </div>
