--- a/public/views/report/stockcard.html
+++ b/public/views/report/stockcard.html
@@ -9,7 +9,21 @@
 						<p class="small bold form-text">Month</p>
 					</div>
 					<div class="col-md-7 ">
-						<input ng-model="stockDate" type="date" class="input-lg">
+						<select ng-model="vm.stockDate"class="input-lg">
+                            <option value="1">January</option>
+                            <option value="2">February</option>
+                            <option value="3">March</option>
+                            <option value="4">April</option>
+                            <option value="5">May</option>
+                            <option value="6">June</option>
+                            <option value="7">July</option>
+                            <option value="8">August</option>
+                            <option value="9">September</option>
+                            <option value="10">October</option>
+                            <option value="11">November</option>
+                            <option value="12">December</option>
+                        </select>
+                        <i class="fa fa-caret-down caret-select"></i>
 					</div>
 				</div>
 			</div>
@@ -19,7 +33,7 @@
 						<p class="small bold form-text">Branch</p>
 					</div>
 					<div class="col-md-7 ">
-						<p class="small form-text">{{ user.relationships.branch.name }}</p>
+						<p class="small form-text">{{ vm.user.relationships.branch.name }}</p>
 					</div>
 				</div>
 			</div>
@@ -31,7 +45,7 @@
 						<p class="small bold form-text">Item</p>
 					</div>
 					<div class="col-md-7">
-						<input type="text" class="input-lg" placeholder="Type item code/name">
+						<input ng-model="vm.stockItem" type="text" class="input-lg" placeholder="Type item code/name">
 					</div>
 				</div>
 			</div>
@@ -41,7 +55,7 @@
 						<p class="small bold form-text">Address</p>
 					</div>
 					<div class="col-md-7 ">
-						<p class="small form-text">{{ user.relationships.branch.address }}</p>
+						<p class="small form-text">{{ vm.user.relationships.branch.address }}</p>
 					</div>
 				</div>
 			</div>
@@ -50,7 +64,7 @@
 			<div class="col-md-6">
 				<div class="row">
 					<div class="col-md-7 col-md-offset-5">
-						<button ng-click="showTable = !showTable" class="btn btn-md btn-success">Search</button>
+						<button ng-click="vm.searchStock(vm.user.relationships.branch,vm.stockDate,vm.stockItem)" class="btn btn-md btn-success">Search</button>
 					</div>
 				</div>
 			</div>
@@ -58,7 +72,7 @@
 		<hr>
 		<div class="row">
 			<div class="col-md-12">
-				<table class="animated fadeIn" ng-show="showTable">
+				<table class="animated fadeIn">
 					<thead>
 						<tr>
 							<th>Date</th>
